# OpenCL

./: Common.h
gol/: CMakeLists.txt  Makefile  gol.cpp
nbody/: Makefile  Makefile~  NBody.cpp  a.out
